--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@fontsource/inconsolata": "^4.5.0",
-    "@fontsource/open-sans": "^4.5.2",
+    "@fontsource/arvo": "^4.5.5",
+    "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
