--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^5.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.1"
+    "react-router-dom": "^6.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
