--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fontsource/arvo": "^4.5.5",
     "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@react-three/drei": "^9.80.8",
+    "@react-three/fiber": "^8.13.6",
+    "@react-three/rapier": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.1",
+    "three": "^0.155.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
